--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-evenly;
   background-color: #fefefe;
-  padding: 15px;
+  padding: 10px;
   border-radius: 10px;
   font-size: 15px;
 }
@@ -20,4 +20,7 @@
   color: #000000;
   font-weight: 600;
   font-size: 20px;
+}
+.icon {
+  margin-right: 10px;
 }
