--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 * {
@@ -33,6 +36,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+main {
+  flex: 1;
 }
 
 @media (prefers-color-scheme: dark) {
